--- a/src/Frontend.Web/Views/Account/LogOn.cshtml
+++ b/src/Frontend.Web/Views/Account/LogOn.cshtml
@@ -1,48 +1,40 @@
-﻿@model Frontend.Web.Models.LogOnModel
+﻿@using Frontend.Web.Models
+@using GwoDb
+@model LogOnModel
 
 @{
-    ViewBag.Title = "Log On";
+    ViewBag.Title = "Anmelden";
 }
 
-<h2>Log On</h2>
-<p>
-    Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
-</p>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-@Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
+<div class="span5" style="margin-left:100px;">
 
 @using (Html.BeginForm()) {
-    <div>
+    @Html.Message(Model.Message)
+    <div class="well">
         <fieldset>
             <legend>Anmelden</legend>
+            
 
-            <div class="editor-label">
                 @Html.LabelFor(m => m.UserName)
-            </div>
-            <div class="editor-field">
                 @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
-            </div>
 
-            <div class="editor-label">
                 @Html.LabelFor(m => m.Password)
-            </div>
-            <div class="editor-field">
                 @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
-            </div>
-
-            <p>
-                <input type="submit" value="Anmelden" />
-            </p>
+                
+                
+                <label for="RememberMe" class="checkbox">
+                    @Html.CheckBoxFor(m => m.RememberMe)
+                    Angemeldet bleiben
+                </label>
+                
+                <br/>
+                <input type="submit" value="Anmelden" class="btn btn-primary" />
+            
         </fieldset>
     </div>
 }
+</div>
