--- a/src/Frontend.Web/Views/Shared/_Layout.cshtml
+++ b/src/Frontend.Web/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
 
             <div class="row well">
                 <div class="span10">
-                    <h1 >Gemeinwohlökonomie Unterstützer</h1>        
+                    <h1><a href="/">Gemeinwohlökonomie Unterstützer</a></h1>        
                 </div>
                 <div class="pull-right" >
                     @Html.Partial("_LogOnPartial")
@@ -63,18 +63,15 @@
                             
                         
                         <div class="well">
-                            @RenderBody()    
                         </div>
 
                     </div>
                 </div>
                
                 <div class="span8">
-                    <div class="row" style="padding: 0 6px;">
-                        <div class="form-search well span5">
-                            <input type="text" class="input-xlarge" id="input01">
-                            <button type="submit" class="btn btn-primary">Suche</button>
-                        </div>                    
+                    <div class="row" style="padding: 0">
+                        
+                        @RenderBody()    
                         
                     </div>
                 </div>
