--- a/src/Frontend.Web/Views/Search/Search.cshtml
+++ b/src/Frontend.Web/Views/Search/Search.cshtml
@@ -3,8 +3,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="form-search well">
-    <input type="text" class="input-xlarge" id="input01">
-    <button type="submit" class="btn btn-primary">Suche</button>
-</div>                    
+<div class="span6">
+
+    <div class="form-search well">
+        <input type="text" class="input-xlarge" id="input01">
+        <button type="submit" class="btn btn-primary">Suche</button>
+    </div>                    
+
+</div>
 
