--- a/src/Frontend.Web/Views/Account/LogOn.cshtml
+++ b/src/Frontend.Web/Views/Account/LogOn.cshtml
@@ -10,7 +10,7 @@
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 
-<div class="span5" style="margin-left:100px;">
+<div class="span5" >
 
 @using (Html.BeginForm()) {
     
