--- a/src/Frontend.Web/Views/Search/Search.cshtml
+++ b/src/Frontend.Web/Views/Search/Search.cshtml
@@ -18,17 +18,35 @@
     <div class="form-search well">
         @Html.TextBoxFor(m => m.SearchTerm, new{@class="input-xlarge"})
         <input type="submit" class="btn btn-primary"/>
-    </div>                    
+    </div>
     
-    <div style="padding-top: 1px;">@Html.Pager(Model.Pager)</div>
-    
-    foreach (var item in Model.Organisations)
-    {
-        <div class="item" style="padding:6px;">@item.Name</div>
-    }
-    
-    @Html.Pager(Model.Pager)
+    <div style="margin-top: -16px; margin-bottom: 5px;">@Model.ResultCount Treffer</div>
 
+    if (Model.ResultCount > 0)
+    {
+        <div style="padding-top: 1px;">@Html.Pager(Model.Pager)</div>
+    
+        foreach (var item in Model.Organisations)
+        {
+            <div class="item" style="padding:6px; width: 700px;">
+                @if(item.Balance2011){
+                    <img src="/Content/gwb-blue.png" style="float: left; padding-right: 7px;"/>
+                }
+                @if(item.Balance2012){
+                    <img src="/Content/gwb-red.png" style="float: left; padding-right: 7px;"/>
+                }
+                <span style="font-size: 17px;">@item.Name</span><br/>
+                @item.Location <a href="@item.Url">@item.Url</a><br/>
+                <i>Branche:</i> @item.Industry  &nbsp; <i>Mitarbeiter:</i> @item.Size
+            </div>
+        }
+    
+        <div style="padding-top: 15px;">@Html.Pager(Model.Pager)</div>         
+    }
+    else
+    {
+         <div>Keine Treffer</div>
+     }
 }
 </div>
 
