(wip) importer, search over multiple field

--- a/src/Frontend.Web/Views/Search/Search.cshtml
+++ b/src/Frontend.Web/Views/Search/Search.cshtml
@@ -20,7 +20,7 @@
     
     <div class="form-search well">
         @Html.TextBoxFor(m => m.SearchTerm, new{@class="input-xlarge"})
-        <input type="submit" class="btn btn-primary"/>
+        <input type="submit" class="btn btn-primary" value="Suche"/>
     </div>
     
     <div style="margin-top: -16px; margin-bottom: 5px;">@Model.ResultCount Treffer</div>
