--- a/src/Frontend.Web/Views/Shared/_Layout.cshtml
+++ b/src/Frontend.Web/Views/Shared/_Layout.cshtml
@@ -8,8 +8,7 @@
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Assets/js/bootstrap.js")" type="text/javascript"></script>
-    
-    
+        
     <script language="javascript" type="text/javascript">
         $(function() {
             $("#btnUnterstuetzerWerden").popover('btnUnterstuetzerWerden');
@@ -42,10 +41,10 @@
                         <div class="well" style="padding: 22px 0;">
                             <ul class="nav nav-list">
                                 
-                                <li class="active"><a href="#"><i class="icon-heart icon-white"></i> Unternehmen (1740)</a></li>
-                                <li><a href="/"><i class="icon-heart"></i> Organisationen/Vereine (20)</a></li>
-                                <li><a href="/"><i class="icon-user"></i> Privatpersonen (400)</a></li>
-                                <li><a href="/"><i class="icon-user"></i> Politikerinnen (80)</a></li>
+                                <li class="active"><a href="/SearchCompany"><i class="icon-heart icon-white"></i> Unternehmen (1740)</a></li>
+                                <li><a href="/SearchClub"><i class="icon-heart"></i> Organisationen/Vereine (20)</a></li>
+                                <li><a href="/SearchPerson"><i class="icon-user"></i> Privatpersonen (400)</a></li>
+                                <li><a href="/SearchPolitician"><i class="icon-user"></i> Politikerinnen (80)</a></li>
                             </ul>
                         </div>
                         
