various changes, club search page

--- a/src/Frontend.Web/Views/Shared/_Layout.cshtml
+++ b/src/Frontend.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using GwoDb
+@using GwoDb.Domain.Search
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -25,6 +27,7 @@
             return Request.RawUrl.Contains(pageName) ? "icon-white" : "";
         }        
     } 
+   
 </head>
     <body>
 
@@ -43,6 +46,8 @@
                 </div>
 
             </div>
+            
+            @{var totals = Sl.Resolve<GetTotals>().Run();}
         
             <div class="row">
                 
@@ -50,10 +55,10 @@
                     <div class="row">
                         <div class="well" style="padding: 22px 0;">
                             <ul class="nav nav-list">  
-                                <li class="@GetActiveClassLi("SearchCompany")"><a href="/SearchCompany"><i class="icon-heart @WhiteHeart("SearchCompany")"></i> Unternehmen (1740)</a></li>
-                                <li class="@GetActiveClassLi("SearchClub")"><a href="/SearchClub"><i class="icon-heart @WhiteHeart("SearchClub")"></i> Organisationen/Vereine (20)</a></li>
-                                <li class="@GetActiveClassLi("SearchPerson")"><a href="/SearchPerson"><i class="icon-user @WhiteHeart("SearchPerson")"></i> Privatpersonen (400)</a></li>
-                                <li class="@GetActiveClassLi("SearchPolitician")"><a href="/SearchPolitician"><i class="icon-user @WhiteHeart("SearchPolitician")"></i> Politikerinnen (80)</a></li>
+                                <li class="@GetActiveClassLi("SearchCompany")"><a href="/SearchCompany"><i class="icon-heart @WhiteHeart("SearchCompany")"></i> Unternehmen @totals.TotalCompanies</a></li>
+                                <li class="@GetActiveClassLi("SearchClub")"><a href="/SearchClub"><i class="icon-heart @WhiteHeart("SearchClub")"></i> Organisationen/Vereine @totals.TotalClubs</a></li>
+                                <li class="@GetActiveClassLi("SearchPerson")"><a href="/SearchPerson"><i class="icon-user @WhiteHeart("SearchPerson")"></i> Privatpersonen @totals.TotalPersons</a></li>
+                                <li class="@GetActiveClassLi("SearchPolitician")"><a href="/SearchPolitician"><i class="icon-user @WhiteHeart("SearchPolitician")"></i> Politikerinnen @totals.TotalPoliticians</a></li>
                             </ul>
                         </div>
                         
@@ -61,7 +66,7 @@
                               <div class="btn-group">
                               <a class="btn btn-large btn-success dropdown-toggle" data-toggle="dropdown" href="#"> &nbsp;   Unterstützer werden! &nbsp; &nbsp; &nbsp; <span class="caret"></span></a>
                               <ul class="dropdown-menu">
-                                  <li><a href="@Url.Action("Company","Supporter")">Als Unternehmen</a></li>
+                                  <li><a href="@Url.Action("Company", "Supporter")">Als Unternehmen</a></li>
                                   <li><a href="#">Als Privatperson</a></li>
                                   <li class="divider"></li>
                                   <li><a href="#">Als Organisation/Verein</a></li>
@@ -74,7 +79,6 @@
                 </div>
 
                 <div class="span9">
-
                     <div class="row" style="padding: 0">
                         @RenderBody()
                     </div>
