--- a/src/Frontend.Web/Views/Shared/_UserMessage.cshtml
+++ b/src/Frontend.Web/Views/Shared/_UserMessage.cshtml
@@ -2,5 +2,5 @@
 
 <div class="@Model.CssClass  fade in">
       <a class="close" data-dismiss="alert" href="#">×</a>
-    @Model.Text 
+    @Html.Raw(Model.Text) 
 </div>
