--- a/src/Frontend.Web/Views/SearchClub/Search.cshtml
+++ b/src/Frontend.Web/Views/SearchClub/Search.cshtml
@@ -21,7 +21,7 @@
         <input type="submit" class="btn btn-primary" value="Suche"/>
     </div>
     
-    <div style="margin-top: -16px; margin-bottom: 5px;">@Model.ResultCount Treffer</div>
+    <div style="margin-top: -16px; margin-bottom: 5px;">@Model.ResultCount Vereine</div>
 
     if (Model.ResultCount > 0)
     {
