search page for all other types

--- a/src/Frontend.Web/Views/SearchClub/Search.cshtml
+++ b/src/Frontend.Web/Views/SearchClub/Search.cshtml
@@ -42,7 +42,7 @@
                 <div style="width: 550px; ">
                     <span style="font-size: 17px;">@item.Name</span><br/>
                     @item.Location <a href="@item.Url">@item.Url</a><br/>
-                    <i>Arbeitsbereit:</i> @item.AreaOfWork  
+                    <i>Arbeitsbereich:</i> @item.AreaOfWork  
                 </div>
             </div>
         }
