--- a/src/Frontend.Web/Views/Shared/_Layout.cshtml
+++ b/src/Frontend.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <script src="@Url.Content("~/Scripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/modernizr-1.7.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Assets/js/bootstrap.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/SearchCompany.js")" type="text/javascript"></script>
         
     <script language="javascript" type="text/javascript">
         $(function() {
