totals of all supporters to left navigation

--- a/src/Frontend.Web/Views/Shared/_Layout.cshtml
+++ b/src/Frontend.Web/Views/Shared/_Layout.cshtml
@@ -61,6 +61,7 @@
                                 <li class="@GetActiveClassLi("SearchPerson")"><a href="/SearchPerson"><i class="icon-user @WhiteHeart("SearchPerson")"></i> Privatpersonen @totals.TotalPersons</a></li>
                                 <li class="@GetActiveClassLi("SearchPolitician")"><a href="/SearchPolitician"><i class="icon-user @WhiteHeart("SearchPolitician")"></i> Politikerinnen @totals.TotalPoliticians</a></li>
                             </ul>
+                            <div style="margin-left: 35px; padding-top:08px;">gesamt: @totals.TotalAll</div>
                         </div>
                         
                         <div class="well">
