--- a/src/Frontend.Web/Views/Shared/_DeleteEntitiyModal.cshtml
+++ b/src/Frontend.Web/Views/Shared/_DeleteEntitiyModal.cshtml
@@ -6,7 +6,7 @@
     </div>
     <div class="modal-body">
         <div class="alert alert-error">
-            ... <b>'<span id="spanTitle"></span>'</b> wird unwiederbringlich gelöscht. 
+            <b>'<span id="spanTitle"></span>'</b> wird unwiederbringlich gelöscht. 
         </div>
     </div>
     <div class="modal-footer">
