--- a/src/Frontend.Web/Views/Shared/_Layout.cshtml
+++ b/src/Frontend.Web/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <div class="row">
                         <div class="well" style="padding: 22px 0;">
                             <ul class="nav nav-list">  
-                                <li class="@GetActiveClassLi("SearchCompany")"><a href="/SearchCompany"><i class="icon-heart @WhiteHeart("SearchCompany")"></i> Unternehmen @totals.TotalCompanies</a></li>
+                                <li class="@GetActiveClassLi("SearchCompany")"><a href="/SearchCompany"><i class="icon-heart @WhiteHeart("SearchCompany")"></i> Unternehmen <span id="leftNavTotalCompanies">@totals.TotalCompanies</span></a></li>
                                 <li class="@GetActiveClassLi("SearchClub")"><a href="/SearchClub"><i class="icon-heart @WhiteHeart("SearchClub")"></i> Organisationen/Vereine @totals.TotalClubs</a></li>
                                 <li class="@GetActiveClassLi("SearchPerson")"><a href="/SearchPerson"><i class="icon-user @WhiteHeart("SearchPerson")"></i> Privatpersonen @totals.TotalPersons</a></li>
                                 <li class="@GetActiveClassLi("SearchPolitician")"><a href="/SearchPolitician"><i class="icon-user @WhiteHeart("SearchPolitician")"></i> Politikerinnen @totals.TotalPoliticians</a></li>
