edit page company, stabilized importer, countries sql update

--- a/src/Frontend.Web/Views/SearchCompany/Details.cshtml
+++ b/src/Frontend.Web/Views/SearchCompany/Details.cshtml
@@ -21,7 +21,7 @@
     
         <div class="form-horizontal">
 
-            <legend>@Model.CompanyName bearbeiten</legend>
+            <legend>"@Model.CompanyName" bearbeiten</legend>
             
             @Html.Message(Model.Message)
             
